@@ -1,5 +1,11 @@
 2004-09-06  Sushma Rai  <rsushma@novell.com>
 
+	* addressbook/e-book-backend-exchange.c
+	(e_book_backend_exchange_remove): Moved unused variables
+	to kill warnings. 
+
+2004-09-06  Sushma Rai  <rsushma@novell.com>
+
 	* storage/xc-commands.c: Disabled menu options for 
 	move and copy folders.  See #62440
 
